--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,15 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <script
+      src="https://kit.fontawesome.com/c4c24742fe.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Street Typology Maker</title>
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
